--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
   <section class="banner">
     <header class="page_header container">
       <nav class="page_nav">
-        <a href="#" class="page_nav__logo"><img srcset="images/logo.png 143w, images/logo@2x.png 286w" sizes="143px" src="images/logo.png" alt="" height="37"></a>
+        <a class="page_nav__logo" href="#"><img class="page_nav__img"
+            srcset="images/logo.png 143w, images/logo@2x.png 286w" sizes="143px" src="images/logo.png" alt=""
+            height="37"></a>
         <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
           <label class="menu__btn" for="menu__toggle">
@@ -26,21 +28,23 @@
             <li><a class="menu__item" href="#">GoStart Kids</a></li>
             <li><a class="menu__item" href="#">Вакансії</a></li>
             <li><a class="menu__item" href="#">Контакти</a></li>
-            <li><button class="page_nav__btn">Залишити заявку</button></li>
+            <li><button class="menu__subscribe">Залишити заявку</button></li>
           </ul>
         </div>
       </nav>
     </header>
-    <div class="promo-wrap">
+    <div class="promo-wrap container">
       <div class="promo">
         <h2 class="promo__header">Наша місія</h2>
         <div class="promo__shadow">
-          <p class="promo__text">Допомогти кожному підлітку створити свою <span class="promo__text_yellow">історію
+          <p class="promo__text">Допомогти кожному підлітку створити свою <span class="promo__text--yellow">історію
               успіху</span></p>
         </div>
       </div>
       <div class="scroll">
-        <button class="scroll__down"><img srcset="images/scroll_down.png 13w, images/scroll_down@2x.png 26w" sizes="13px" src="images/scroll_down.png" alt="" height="19"></button>
+        <button class="scroll__down" type="button"><img
+            srcset="images/scroll_down.png 13w, images/scroll_down@2x.png 26w" sizes="13px" src="images/scroll_down.png"
+            alt="" height="19"></button>
       </div>
     </div>
   </section>
