--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>GOITeens</title>
+    <link rel="stylesheet" href="css/styles.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>GOITeens</title>
-  <link rel="stylesheet" href="css/styles.min.css" />
-</head>
+  <body>
+    <section class="banner">
+      <header class="page_header container">
+        <nav class="page_nav">
+          <a class="page_nav__logo" href="#"
+            ><img
+              class="page_nav__img"
+              srcset="images/logo.png 143w, images/logo@2x.png 286w"
+              sizes="143px"
+              src="images/logo.png"
+              alt=""
+              height="37"
+          /></a>
 
-<body>
-  <section class="banner">
-    <header class="page_header container">
-      <nav class="page_nav">
-        <a class="page_nav__logo" href="#"><img class="page_nav__img"
-            srcset="images/logo.png 143w, images/logo@2x.png 286w" sizes="143px" src="images/logo.png" alt=""
-            height="37"></a>
-        <div class="hamburger-menu">
-          <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle">
-            <span></span>
-          </label>
-          <ul class="menu__box">
-            <li><a class="menu__item" href="#">Front-End</a></li>
-            <li><a class="menu__item" href="#">Game Dev</a></li>
-            <li><a class="menu__item" href="#">Smart Design</a></li>
-            <li><a class="menu__item" href="#">GoStart Kids</a></li>
-            <li><a class="menu__item" href="#">Вакансії</a></li>
-            <li><a class="menu__item" href="#">Контакти</a></li>
-            <li><button class="menu__subscribe">Залишити заявку</button></li>
-          </ul>
+          <div class="hamburger-menu">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
+            <ul class="menu__box">
+              <li><a class="menu__item" href="#">Front-End</a></li>
+              <li><a class="menu__item" href="#">Game Dev</a></li>
+              <li><a class="menu__item" href="#">Smart Design</a></li>
+              <li><a class="menu__item" href="#">GoStart Kids</a></li>
+              <li><a class="menu__item" href="#">Вакансії</a></li>
+              <li><a class="menu__item" href="#">Контакти</a></li>
+              <li><button class="menu__subscribe">Залишити заявку</button></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <div class="promo-wrap container">
+        <div class="promo">
+          <h2 class="promo__header">Наша місія</h2>
+          <div class="promo__shadow">
+            <p class="promo__text">
+              Допомогти кожному підлітку створити свою
+              <span class="promo__text--yellow">історію успіху</span>
+            </p>
+          </div>
         </div>
-      </nav>
-    </header>
-    <div class="promo-wrap container">
-      <div class="promo">
-        <h2 class="promo__header">Наша місія</h2>
-        <div class="promo__shadow">
-          <p class="promo__text">Допомогти кожному підлітку створити свою <span class="promo__text--yellow">історію
-              успіху</span></p>
+        <div class="scroll">
+          <button class="scroll__down" type="button">
+            <img
+              srcset="images/scroll_down.png 13w, images/scroll_down@2x.png 26w"
+              sizes="13px"
+              src="images/scroll_down.png"
+              alt=""
+              height="19"
+            />
+          </button>
         </div>
       </div>
-      <div class="scroll">
-        <button class="scroll__down" type="button"><img
-            srcset="images/scroll_down.png 13w, images/scroll_down@2x.png 26w" sizes="13px" src="images/scroll_down.png"
-            alt="" height="19"></button>
-      </div>
-    </div>
-  </section>
-</body>
+    </section>
 
+    <section class="courses container">
+      <h2 class="courses__title">
+        напрямки goiteens
+      </h2>
+      <div class="courses__card-container">
+        <ul class="courses__card-list">
+          <li class="courses__card-item">
+            <div class="courses__card-item__wrapper">
+              <p class="courses__card-title">
+                Front-End
+              </p>
+              <p class="courses__card-description">
+                Створення веб-сайтів будь-якої складності
+              </p>
+              <p class="courses__card-age">
+                13-15<sup class="courses__card-age--sup">років</sup>
+              </p>
+            </div>
+          </li>
+
+          <li class="courses__card-item">
+            <div class="courses__card-item__wrapper">
+              <p class="courses__card-title">
+                Game Dev
+              </p>
+              <p class="courses__card-description">
+                Розробка власних комп’ютерних ігор
+              </p>
+              <p class="courses__card-age">
+                13-15<sup class="courses__card-age--sup">років</sup>
+              </p>
+            </div>
+          </li>
+
+          <li class="courses__card-item">
+            <div class="courses__card-item__wrapper">
+              <p class="courses__card-title">
+                Smart Design
+              </p>
+              <p class="courses__card-description">
+                Опанування графічними редакторами
+              </p>
+              <p class="courses__card-age">
+                13-15<sup class="courses__card-age--sup">років</sup>
+              </p>
+            </div>
+          </li>
+
+          <li class="courses__card-item">
+            <div class="courses__card-item__wrapper">
+              <p class="courses__card-title">
+                GoStart Kids
+              </p>
+              <p class="courses__card-description">
+                Мета: Вивчення базових технологій
+              </p>
+              <p class="courses__card-age">
+                11-12<sup class="courses__card-age--sup">років</sup>
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="program container">
+      <div class="program__description">
+        <p class="program__description-text">
+          За останні 5 років кількість дітей, які вміють користуватися
+          комп'ютером, збільшилася приблизно в 10 разів.
+        </p>
+        <p class="program__description-text">
+          Як зазначає більшість дослідників, ці тенденції будуть прискорюватися
+          незалежно від шкільної освіти.
+        </p>
+      </div>
+      <div class="program__img"></div>
+      <div class="program__training">
+        <p class="program__training-text">
+          Програма навчання створюється за участі відомих спеціалістів IT
+          сектору, успішних стартаперів, бізнес-тренерів і підліткових
+          психологів.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
