--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,10 @@
     <link rel="stylesheet" href="css/styles.min.css" />
   </head>
 
-  <body></body>
+  <body>
+      <main class= "container">
+       //= html/section2.html
+       //= html/section3.html
+      </main>
+  </body>
 </html>
