Added section 2 and section 3

--- a/src/index.html
+++ b/src/index.html
@@ -148,5 +148,84 @@
         </ul>
       </div>
     </section>
+    <section class="block-information container">
+      <h2 class="title1 number1">як ми навчаємо</h2>
+      <ul class="info-list">
+        <li class="info-list__item  team-icons icon1 ">
+          <p class="info-text">
+            Даємо можливість стати частиною першої підліткової ІТ-спільноти
+          </p>
+        </li>
+        <li class="info-list__item  team-icons icon2">
+          <p class="info-text">
+            Гарантуємо підтримку професійних розробників і викладачів
+          </p>
+        </li>
+        <li class="info-list__item team-icons icon3">
+          <p class="info-text">
+            Прокачуємо технічні навички в програмуванні ігор, веб сайтів і
+            дизайні.
+          </p>
+        </li>
+        <li class="info-list__item team-icons icon4">
+          <p class="info-text">Показуємо можливі шляхи монетизації ідей.</p>
+        </li>
+        <li class="info-list__item team-icons icon5">
+          <p class="info-text">
+            Вчимо презентувати себе та свої творчі задуми.
+          </p>
+        </li>
+        <li class="info-list__item team-icons icon6">
+          <p class="info-text">Допомагаємо зробити власне портфоліо.</p>
+        </li>
+        <li class="info-list__item team-icons icon7">
+          <p class="info-text">Надаємо інтерактивний навчальний простір.</p>
+        </li>
+      </ul>
+    </section>
+    <section class="information container">
+      <h2 class="title1 number2">структура навчання</h2>
+      <ul class="new__list">
+        <li class="new__list-info part1">
+          <div class="info">
+            <div class="info-inner">
+              <h3 class="title2">1.Tech Skills</h3>
+              <p class="new-list__text">
+                Освоєння технічних навичок: вміння користуватись різними
+                програмами,вивчення різних мов кодування.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li class="new__list-info part2">
+          <div class="info">
+            <div class="info-inner">
+              <h3 class="title2">2.Soft Skills</h3>
+              <p class="new-list__text">
+                Self-building. Time Management. Effective Communication.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li class="new__list-info part3">
+          <div class="info">
+            <div class="info-inner">
+              <h3 class="title2">3.It-English</h3>
+              <p class="new-list__text">
+                Вивчення розмовної за допомогою Speaking Club.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li class="new__list-info part4">
+          <div class="info">
+            <div class="info-inner">
+              <h3 class="title2">4.Хакатон</h3>
+              <p class="new-list__text">Дводенний Frontend марафон.</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
