scroll down modified, id add

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="scroll">
-          <button class="scroll__down" type="button">
+          <a href="#program_block">
             <img
               srcset="images/scroll_down.png 13w, images/scroll_down@2x.png 26w"
               sizes="13px"
@@ -58,12 +58,12 @@
               alt=""
               height="19"
             />
-          </button>
+          </a>
         </div>
       </div>
     </section>
 
-    <section class="program container">
+    <section id="program_block" class="program container">
       <div class="program__description">
         <p class="program__description-text">
           За останні 5 років кількість дітей, які вміють користуватися
