--- a/src/index.html
+++ b/src/index.html
@@ -227,5 +227,61 @@
         </li>
       </ul>
     </section>
+    <section class="footer container">
+      <div class="footer-button__up">
+      <a href="#" class="footer-button__up--item">
+          <svg>
+              <use href="images/sprite.svg#arrow"></use>
+            </svg>
+      </a>
+    </div>
+      <a class="footer-logo" href="#">
+        <img
+          class="footer-logo__img"
+          srcset="images/logo.png 143w, images/logo@2x.png 286w"
+          sizes="143px"
+          src="images/logo.png"
+          alt=""
+          height="37"
+        />
+      </a>
+      <div class="footer-list">
+          <div class="footer-list__text">
+        <p class="footer-list__text--locate">
+          01133 Україна, Київ 5 хвилин від м. Печерська бул. Лесі Українки 26
+          4-й поверх
+        </p>
+        <p class="footer-list__text--contacts">
+          contact@goiteens.ua +38 093 343 21 27 +38 067 326 95 92 +38 050 366 17
+          77
+        </p>
+      </div>
+      <div class="footer-list__items">
+      <button class="footer-list__btn">Залишити заявку</button>
+      <div class="footer-list__icons">
+        <a href="#" class="footer-list__icons--item">
+          <svg>
+            <use href="images/sprite.svg#telegram"></use>
+          </svg>
+        </a>
+        <a href="#" class="footer-list__icons--item">
+          <svg>
+            <use href="images/sprite.svg#facebook"></use>
+          </svg>
+        </a>
+        <a href="#" class="footer-list__icons--item">
+          <svg>
+            <use href="images/sprite.svg#youtube"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+    </div>
+      <div class="footer-occupation">
+        <a href="#" class="footer-occupation__link"><p>Політика конфіденційності</p></a>
+        <a href="#" class="footer-occupation__link"><p>Відмова від відповідальності</p></a>
+        <a href="#" class="footer-occupation__link"><p>Згода з розсилкою</p></a>
+      </div>
+    </section>
   </body>
 </html>
