--- a/src/index.html
+++ b/src/index.html
@@ -148,80 +148,82 @@
         </ul>
       </div>
     </section>
-    <section class="block-information container">
-      <h2 class="title1 number1">як ми навчаємо</h2>
+    <section class="block-info">
+      <div class="info container"> 
+      <h2 class="info__title1 number1">як ми навчаємо</h2>
       <ul class="info-list">
         <li class="info-list__item  team-icons icon1 ">
-          <p class="info-text">
-            Даємо можливість стати частиною першої підліткової ІТ-спільноти
+          <p class="info__text">
+            Даємо можливість стати частиною першої підліткової ІТ-спільноти.
           </p>
         </li>
         <li class="info-list__item  team-icons icon2">
-          <p class="info-text">
-            Гарантуємо підтримку професійних розробників і викладачів
+          <p class="info__text">
+            Гарантуємо підтримку професійних розробників і викладачів.
           </p>
         </li>
         <li class="info-list__item team-icons icon3">
-          <p class="info-text">
+          <p class="info__text">
             Прокачуємо технічні навички в програмуванні ігор, веб сайтів і
             дизайні.
           </p>
         </li>
         <li class="info-list__item team-icons icon4">
-          <p class="info-text">Показуємо можливі шляхи монетизації ідей.</p>
+          <p class="info__text">Показуємо можливі шляхи монетизації ідей.</p>
         </li>
         <li class="info-list__item team-icons icon5">
-          <p class="info-text">
+          <p class="info__text">
             Вчимо презентувати себе та свої творчі задуми.
           </p>
         </li>
         <li class="info-list__item team-icons icon6">
-          <p class="info-text">Допомагаємо зробити власне портфоліо.</p>
+          <p class="info__text">Допомагаємо зробити власне портфоліо.</p>
         </li>
         <li class="info-list__item team-icons icon7">
-          <p class="info-text">Надаємо інтерактивний навчальний простір.</p>
+          <p class="info__text">Надаємо інтерактивний навчальний простір.</p>
         </li>
       </ul>
+    </div>
     </section>
-    <section class="information container">
-      <h2 class="title1 number2">структура навчання</h2>
-      <ul class="new__list">
-        <li class="new__list-info part1">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">1.Tech Skills</h3>
-              <p class="new-list__text">
+    <section class="structure container">
+      <h2 class="structure__title1 number2">структура навчання</h2>
+      <ul class="structure__list">
+        <li class="structure__list-info part1">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">1. Tech Skills</h3>
+              <p class="structure__text">
                 Освоєння технічних навичок: вміння користуватись різними
-                програмами,вивчення різних мов кодування.
+                програмами, вивчення різних мов кодування.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part2">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">2.Soft Skills</h3>
-              <p class="new-list__text">
+        <li class="structure__list-info part2">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">2. Soft Skills</h3>
+              <p class="structure__text">
                 Self-building. Time Management. Effective Communication.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part3">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">3.It-English</h3>
-              <p class="new-list__text">
+        <li class="structure__list-info part3">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">3. It-English</h3>
+              <p class="structure__text">
                 Вивчення розмовної за допомогою Speaking Club.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part4">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">4.Хакатон</h3>
-              <p class="new-list__text">Дводенний Frontend марафон.</p>
+        <li class="structure__list-info part4">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">4. Хакатон</h3>
+              <p class="structure__text">Дводенний Frontend марафон.</p>
             </div>
           </div>
         </li>
