Added footer and reworked sections

--- a/src/index.html
+++ b/src/index.html
@@ -148,84 +148,199 @@
         </ul>
       </div>
     </section>
-    <section class="block-information container">
-      <h2 class="title1 number1">як ми навчаємо</h2>
-      <ul class="info-list">
-        <li class="info-list__item  team-icons icon1 ">
-          <p class="info-text">
-            Даємо можливість стати частиною першої підліткової ІТ-спільноти
-          </p>
-        </li>
-        <li class="info-list__item  team-icons icon2">
-          <p class="info-text">
-            Гарантуємо підтримку професійних розробників і викладачів
-          </p>
-        </li>
-        <li class="info-list__item team-icons icon3">
-          <p class="info-text">
-            Прокачуємо технічні навички в програмуванні ігор, веб сайтів і
-            дизайні.
-          </p>
-        </li>
-        <li class="info-list__item team-icons icon4">
-          <p class="info-text">Показуємо можливі шляхи монетизації ідей.</p>
-        </li>
-        <li class="info-list__item team-icons icon5">
-          <p class="info-text">
-            Вчимо презентувати себе та свої творчі задуми.
-          </p>
-        </li>
-        <li class="info-list__item team-icons icon6">
-          <p class="info-text">Допомагаємо зробити власне портфоліо.</p>
-        </li>
-        <li class="info-list__item team-icons icon7">
-          <p class="info-text">Надаємо інтерактивний навчальний простір.</p>
-        </li>
-      </ul>
+    <section class="block-info">
+      <div class="info container">
+        <h2 class="info__title1 number1">як ми навчаємо</h2>
+        <ul class="info-list">
+          <li class="info-list__item  team-icons icon1 ">
+            <p class="info__text">
+              Даємо можливість стати частиною першої підліткової ІТ-спільноти.
+            </p>
+          </li>
+          <li class="info-list__item  team-icons icon2">
+            <p class="info__text">
+              Гарантуємо підтримку професійних розробників і викладачів.
+            </p>
+          </li>
+          <li class="info-list__item team-icons icon3">
+            <p class="info__text">
+              Прокачуємо технічні навички в програмуванні ігор, веб сайтів і
+              дизайні.
+            </p>
+          </li>
+          <li class="info-list__item team-icons icon4">
+            <p class="info__text">Показуємо можливі шляхи монетизації ідей.</p>
+          </li>
+          <li class="info-list__item team-icons icon5">
+            <p class="info__text">
+              Вчимо презентувати себе та свої творчі задуми.
+            </p>
+          </li>
+          <li class="info-list__item team-icons icon6">
+            <p class="info__text">Допомагаємо зробити власне портфоліо.</p>
+          </li>
+          <li class="info-list__item team-icons icon7">
+            <p class="info__text">Надаємо інтерактивний навчальний простір.</p>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section class="information container">
-      <h2 class="title1 number2">структура навчання</h2>
-      <ul class="new__list">
-        <li class="new__list-info part1">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">1.Tech Skills</h3>
-              <p class="new-list__text">
+    <section class="structure container">
+      <h2 class="structure__title1 number2">структура навчання</h2>
+      <ul class="structure__list">
+        <li class="structure__list-info part1">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">1. Tech Skills</h3>
+              <p class="structure__text">
                 Освоєння технічних навичок: вміння користуватись різними
-                програмами,вивчення різних мов кодування.
+                програмами, вивчення різних мов кодування.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part2">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">2.Soft Skills</h3>
-              <p class="new-list__text">
+        <li class="structure__list-info part2">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">2. Soft Skills</h3>
+              <p class="structure__text">
                 Self-building. Time Management. Effective Communication.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part3">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">3.It-English</h3>
-              <p class="new-list__text">
+        <li class="structure__list-info part3">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">3. It-English</h3>
+              <p class="structure__text">
                 Вивчення розмовної за допомогою Speaking Club.
               </p>
             </div>
           </div>
         </li>
-        <li class="new__list-info part4">
-          <div class="info">
-            <div class="info-inner">
-              <h3 class="title2">4.Хакатон</h3>
-              <p class="new-list__text">Дводенний Frontend марафон.</p>
+        <li class="structure__list-info part4">
+          <div class="structure__info">
+            <div class="structure__info--inner">
+              <h3 class="structure__title2">4. Хакатон</h3>
+              <p class="structure__text">Дводенний Frontend марафон.</p>
             </div>
           </div>
         </li>
       </ul>
+    </section>
+    <section class="footer">
+      <footer class="footer-main">
+        <div class="container">
+          <div class="footer-button__up">
+            <a href="#" class="footer-button__up--item">
+              <svg>
+                <use href="images/sprite.svg#arrow"></use>
+              </svg>
+            </a>
+          </div>
+          <a class="footer-logo" href="#">
+            <img
+              class="footer-logo__img"
+              srcset="images/logo.png 143w, images/logo@2x.png 286w"
+              sizes="143px"
+              src="images/logo.png"
+              alt=""
+              height="37"
+            />
+          </a>
+          <div class="footer-wrapper">
+            <ul class="footer-list">
+              <li class="footer-list__text">
+                <p class="footer-list__text--locate">
+                  01133 Україна, Київ 5 хвилин від м. Печерська бул. Лесі
+                  Українки 26
+                  <br />4-й поверх
+                </p>
+              </li>
+
+              <li class="footer-list__text">
+                <p class="footer-list__text--contacts">
+                  contact@goiteens.ua +38 093 343 21 27 +38 067 326 95 92 +38
+                  050 366 17 77
+                </p>
+              </li>
+            </ul>
+            <div class="footer-list__items">
+              <button type="button" class="menu__subscribe footer-button">
+                <a href="https://goiteens.ua/" target="blank"
+                  >Залишити заявку</a
+                >
+              </button>
+              <ul class="footer-list__icons">
+                <li class="item">
+                  <a
+                    href="https://t.me/junior_developer_ua"
+                    target="blank"
+                    class="footer-list__icons--item"
+                  >
+                    <svg>
+                      <use href="images/sprite.svg#telegram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a
+                    href="https://www.facebook.com/goITclub/"
+                    target="blank"
+                    class="footer-list__icons--item"
+                  >
+                    <svg>
+                      <use href="images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a
+                    href="https://www.youtube.com/channel/UCN7NQEBOUuIoXrJZzqVb58Q/videos"
+                    target="blank"
+                    class="footer-list__icons--item"
+                  >
+                    <svg>
+                      <use href="images/sprite.svg#youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <footer class="footer-legal">
+        <div class="container">
+          <ul class="footer-legal__list">
+            <li>
+              <a
+                href="https://goiteens.ua/"
+                target="blank"
+                class="footer-legal__list--link"
+                ><p>Політика конфіденційності</p></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://goiteens.ua/"
+                target="blank"
+                class="footer-legal__list--link"
+                ><p>Відмова від відповідальності</p></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://goiteens.ua/"
+                target="blank"
+                class="footer-legal__list--link"
+                ><p>Згода з розсилкою</p></a
+              >
+            </li>
+          </ul>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
